# SharpMPQ

./: .gitignore  README.md  SharpMPQ.sln
Dependencies/libmpq/osx/: libmpq.dylib
libmpq/: CMakeLists.txt
libmpq/bzip2/: CMakeLists.txt
libmpq/libmpq/: CMakeLists.txt
libmpq/libmpq/doc/man3/: libmpq__archive_size_packed.3  libmpq__archive_size_unpacked.3  libmpq__block_size_unpacked.3  libmpq__file_size_packed.3  libmpq__file_size_unpacked.3
libmpq/libmpq/libmpq/: extract.c  mpq.h
libmpq/zlib/: CMakeLists.txt
src/: Class1.cs  NativeMethods.cs  SharpMPQ.csproj
tests/: SharpMPQ.Tests.csproj  SharpMPQTests.cs
